# epic-sklearn

./: MANIFEST.in  README.md  ci.sh  quicklib_setup.yml  setup.py  test_requirements.txt
.github/workflows/: ci.yml
epic/sklearn/: composite.py  decomposition.py  ensemble.py  general.py  pipeline.py  plot.py
epic/sklearn/feature_selection/: __init__.py  mutual_info.py
epic/sklearn/metrics/: __init__.py  ranking.py  reports.py  scores.py
epic/sklearn/metrics/leven/: CMakeLists.txt  indices.h  leven.cpp  levenshtein.h  parallel.h  pystring.h
epic/sklearn/neighbors/: __init__.py  base.py  unsupervised.py  weight.py
epic/sklearn/preprocessing/: __init__.py  categorical.py  data.py  general.py  label.py
epic/sklearn/tests/: test_utils.py
epic/sklearn/utils/: __init__.py  data.py  general.py  kneedle.py  thresholding.py
